k8s/nextjs_cra.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # 여러분의 image 주소를 입력해주세요.
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_3679ee3fa5c9
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: frontend
  # ports:
  #   - name: 3000-3000
  #     port: 3000
  #     protocol: TCP
  #     targetPort: 3000
  # selector:
  #   app: krampoline
  # type: LoadBalancer
---
