k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: frontend
  # ports:
  #   - name: 3000-3000
  #     port: 3000
  #     protocol: TCP
  #     targetPort: 3000
  # selector:
  #   app: krampoline
  # type: LoadBalancer
